--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "EATS-AB-US",
-  "homepage": "https://BeshoyKhater.github.io/Eats",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://BeshoyKhater.github.io/Eats",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
